--- a/dubbo-consumer/src/main/resources/application.properties
+++ b/dubbo-consumer/src/main/resources/application.properties
@@ -1,6 +1,4 @@
 #ÅäÖÃ¶Ë¿Ú
 server.port=9000
-
-spring.dubbo.application.name=dubbo-consumer
-spring.dubbo.application.registry=zookeeper://127.0.0.1:2181
-
+spring.application.name = dubbo-consumer
+dubbo.registry.address=zookeeper://127.0.0.1:2181
