--- a/dubbo-provider/src/main/resources/application.properties
+++ b/dubbo-provider/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 #ÅäÖÃ¶Ë¿Ú
 server.port=9011
+spring.application.name = dubbo-provider
+dubbo.registry.address=zookeeper://127.0.0.1:2181
 
-spring.dubbo.application.name=dubbo-provider
-spring.dubbo.application.registry=zookeeper://127.0.0.1:2181
+
+
+#
+#dubbo.protocol.name=dubbo
+#dubbo.protocol.port=12345
 
