--- a/dubbo-provider/src/main/resources/application.properties
+++ b/dubbo-provider/src/main/resources/application.properties
@@ -3,9 +3,6 @@ server.port=9011
 spring.application.name = dubbo-provider
 dubbo.registry.address=zookeeper://127.0.0.1:2181
 
-
-
-#
-#dubbo.protocol.name=dubbo
-#dubbo.protocol.port=12345
+dubbo.protocol.name=dubbo
+dubbo.protocol.port=20990
 
