第五次提交

--- a/dubbo-consumer/src/main/resources/application.properties
+++ b/dubbo-consumer/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 #ÅäÖÃ¶Ë¿Ú
 server.port=9000
 spring.application.name = dubbo-consumer
-dubbo.registry.address=zookeeper://127.0.0.1:2181
+#dubbo.registry.address=zookeeper://127.0.0.1:2181
+
+
+#dubbo.consumer.check=false
+#dubbo.registry.check=false
