--- a/dubbo-provider/src/main/resources/application.properties
+++ b/dubbo-provider/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 #ÅäÖÃ¶Ë¿Ú
-server.port=9011
-spring.application.name = dubbo-provider
-dubbo.registry.address=zookeeper://127.0.0.1:2181
+#server.port=9011
+#spring.application.name = dubbo-provider
+#dubbo.registry.address=zookeeper://127.0.0.1:2181
 
-dubbo.protocol.name=dubbo
-dubbo.protocol.port=20990
+#dubbo.protocol.name=dubbo
+#dubbo.protocol.port=20990
 
+
+#dubbo.reference.check=false
+#dubbo.consumer.check=false
+#dubbo.registry.check=false
